--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask-Security==1.7.5
 Flask-Social==1.6.2
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+gunicorn==19.4.5
 httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.7.1
@@ -50,4 +51,3 @@ whitenoise==2.0.6
 WTForms==2.0.2
 xattr==0.6.4
 zope.interface==4.1.1
-https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
